--- a/app/templates/views/index.hbs
+++ b/app/templates/views/index.hbs
@@ -34,6 +34,8 @@
 			<li><span>15:30</span></li>
 			<li><span>16:00</span></li>
 			<li><span>16:30</span></li>
+			<li><span>17:00</span></li>
+			<li><span>17:30</span></li>
 		</ul>
 	</div> <!-- .timeline -->
 
@@ -46,10 +48,20 @@
 					<ul>
 						{{#each events}}
 							<li class="single-event" data-start="{{starttime}}" data-end="{{endtime}}" data-content="event-abs-circuit" 
-								data-event="{{eventType}}">
-								<a href="#0">
-									<em class="event-name">{{name}}</em>
-								</a>
+								data-event="event-1">
+								{{#ifCond difference "==" 15}}
+									<a href="#0" style="padding-top:4px;">
+									</a>
+								{{/ifCond}}
+								{{#ifCond difference "==" 30}}
+									<a href="#0" style="padding-top:7px;">
+										<em class="event-name">{{name}}</em>
+									</a>
+									{{else}}
+									<a href="#0">
+										<em class="event-name">{{name}}</em>
+									</a>
+								{{/ifCond}}
 							</li>
 						{{/each}}
 					</ul>
