--- a/app/templates/views/login.hbs
+++ b/app/templates/views/login.hbs
@@ -2,8 +2,7 @@
 
 <form class="form-signin" action="javascript:submitform()">
     <div class="text-center mb-4">
-        <img class="mb-4" src="http://teneightytwo.co.uk/static/img/illustrations/web-design-development-svg.svg" alt="" width="256" height="256">
-        <h1 class="h3 mb-3 font-weight-normal">MVC-Template</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Meeting Booking System</h1>
     </div>
 
     <div class="form-label-group">
@@ -16,12 +15,9 @@
         <label for="inputPassword">Password</label>
     </div>
 
-{{!-- <div class="checkbox mb-3">
-    <label>
-        <input type="checkbox" value="remember-me"> Remember me
-    </label>
-</div> --}}
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    <p class="mt-5 mb-3 text-muted text-center">&copy; 2017-2018</p>
+    <a class="mt-5 mb-3 text-center" href="/register">Register</a>
+    <p class="mt-5 mb-3 text-muted text-center">elSoware&copy; 2017-2018</p>
+
 </form>
 </body>
