--- a/app/templates/views/event-types/edit.hbs
+++ b/app/templates/views/event-types/edit.hbs
@@ -23,6 +23,17 @@
             <label for="formGroupExampleInput">Description</label>
             <input type="text" class="form-control" name="description" value="{{eventType.description}}">
         </div>
+        <div class="form-group">
+            <label for="formGroupExampleInput">Color</label>
+            <select class="form-control" name="color" required>
+                <option value="event-1">Blue</option>
+                <option value="event-2">Purple</option>
+                <option value="event-3">Green</option>
+                <option value="event-4">Yellow</option>
+                <option value="event-5">Red</option>
+                <option value="event-6">Pink</option>
+            </select>
+        </div>
         <button type="submit" class="btn btn-primary">Save</button>
     </form>        
     </p>    
