--- a/app/templates/views/index.hbs
+++ b/app/templates/views/index.hbs
@@ -34,8 +34,6 @@
 			<li><span>15:30</span></li>
 			<li><span>16:00</span></li>
 			<li><span>16:30</span></li>
-			<li><span>17:00</span></li>
-			<li><span>17:30</span></li>
 		</ul>
 	</div> <!-- .timeline -->
 
@@ -48,20 +46,22 @@
 					<ul>
 						{{#each events}}
 							<li class="single-event" data-start="{{starttime}}" data-end="{{endtime}}" data-content="event-abs-circuit" 
-								data-event="event-1">
+								data-event="{{eventType}}">
 								{{#ifCond difference "==" 15}}
-									<a href="#0" style="padding-top:4px;">
+									<a href="#0" style="padding-top:0px;">
 									</a>
+								{{else}}
+									{{#ifCond difference "==" 30}}
+										<a href="#0" style="padding-top:3px;font-size:0.8rem!important;line-height:1;padding-left:10px;">
+											<span class="event-name">{{name}}</em>
+										</a>
+										{{else}}
+										<a href="#0">
+											<span class="event-name">{{name}}</em>
+										</a>
+									{{/ifCond}}
 								{{/ifCond}}
-								{{#ifCond difference "==" 30}}
-									<a href="#0" style="padding-top:7px;">
-										<em class="event-name">{{name}}</em>
-									</a>
-									{{else}}
-									<a href="#0">
-										<em class="event-name">{{name}}</em>
-									</a>
-								{{/ifCond}}
+								
 							</li>
 						{{/each}}
 					</ul>
